Kubernetes/Istio/istio-ingress-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registrar-info
spec:
  hosts:
    - "*"
  gateways:
    - registration-system-gateway
  http:
    - match:
        - uri:
            exact: /index
        - uri:
            regex: '^\/initializeEvent\/.*$'
        - uri:
            regex: '^\/edit\/.*$'
        - uri:
            exact: /showUsers
        - uri:
            prefix: /scripts
        - uri:
            exact: /addNewUser
        - uri:
            regex: '^.*\.(ico|png|jpg)$'
      route:
        - destination:
            host: registrar-registration.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            exact: /index
        - uri:
            prefix: /upload
        - uri:
            regex: '^\/initializeEvent\/.*$'
        - uri:
            prefix: /css/style.css
#        - uri:
#            prefix: /images/ECS_Digital_Logo_RGB1-1.jpg
        - uri:
            regex: '^.*\.(ico|png|jpg)$'
      route:
        - destination:
            host: virtualenvironment-registration.default.svc.cluster.local
            port:
              number: 8100
    - match:
        - uri:
            exact: /eventList
        - uri:
            exact: /addNewEvent
        - uri:
            regex: '^\/edit\/.*$'
        - uri:
            prefix: /static
        - uri:
            regex: '^.*\.(ico|png|jpg)$'
      route:
        - destination:
            host: event-registration.default.svc.cluster.local
            port:
              number: 8090
